--- a/Atividades/Atividade-07.html
+++ b/Atividades/Atividade-07.html
@@ -3,42 +3,83 @@
     switch (mes) {
         case '1':
             document.write('<h1>Seu mês é Janeiro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Janeiro')
             break
         case '2':
             document.write('<h1>Seu mês é Fevereiro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Fevereiro')
             break
         case '3':
             document.write('<h1>Seu mês é Março!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Março')
             break
         case '4':
             document.write('<h1>Seu mês é Abril!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Abril')
             break
         case '5':
             document.write('<h1>Seu mês é Maio!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Maio')
             break
         case '6':
             document.write('<h1>Seu mês é Junho!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Junho')
             break
         case '7':
             document.write('<h1>Seu mês é Julho!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Julho')
             break
         case '8':
             document.write('<h1>Seu mês é Agosto!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Agosto')
             break
         case '9':
             document.write('<h1>Seu mês é Setembro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Setembro')
             break
         case '10':
             document.write('<h1>Seu mês é Outubro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Outubro')
             break
         case '11':
             document.write('<h1>Seu mês é Novembro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Novembro')
             break
         case '12':
             document.write('<h1>Seu mês é Dezembro!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Dezembro')
             break
 
         default:
             document.write('<h1>Mês Inválido!</h1>')
+            document.write('<table border = 2px><tr><td>Classificação do Mês')
+            document.write('<tr><td>Número digitado:</td><td>' + mes)
+            document.write('<tr><td>Mês correspondente:</td><td> Inválido')
+
+
 }
 </script>
