--- a/Atividades/Atividade-06.html
+++ b/Atividades/Atividade-06.html
@@ -1,10 +1,10 @@
 <script>
-    let número = prompt('Digite um número')
-    document.write('<b>Ímpar ou Par</b>' + '<br>' + '<b>Número Digitado:</b> ' + número + '<br>')
-    if (numero % 2) {
-        document.write('<b>Definição:</b> Impar')
+    let numero = prompt ('Digite um numero')
+    document.write('<b>Par ou impar</b> ' + '<br>' + '<b>Numero digitado:</b> ' + numero + '<br>')
+    if (numero % 2){
+        document.write('<b>Definição:</b> impar')
     }
-    else {
-        document.write('<b>Definição:</b> Par')
+    else{
+        document.write('<b>Definição:</b> par')
     }
-</script>
+    </script>
